[gd_scene load_steps=24 format=3 uid="uid://dal4a52ms64j6"]

[ext_resource type="Script" uid="uid://ddldx468qw34w" path="res://Scripts/main_menu.gd" id="1_n45e2"]
[ext_resource type="Texture2D" uid="uid://vtf7yfl2710m" path="res://Assets/UI/panel-border-030.png" id="2_ce3w2"]
[ext_resource type="FontFile" uid="uid://dbt53hulxegh2" path="res://Assets/UI/Fonts/Imperator.ttf" id="2_opfnp"]
[ext_resource type="Texture2D" uid="uid://blimb4qxelwus" path="res://Assets/Art/Room_01_Background.png" id="2_vr1f0"]
[ext_resource type="Texture2D" uid="uid://ccbcslnsifj3o" path="res://Assets/UI/divider-fade-002.png" id="3_1ehe0"]
[ext_resource type="Theme" uid="uid://cpqqj8uayl3pq" path="res://Themes/Label.tres" id="3_n45e2"]
[ext_resource type="Texture2D" uid="uid://bhbhtwyure34d" path="res://Assets/Art/Door_Small.png" id="3_t1dhk"]
[ext_resource type="Texture2D" uid="uid://bybx87ii2t4mm" path="res://Assets/Art/Blob_Slime.png" id="4_5egv6"]
[ext_resource type="Texture2D" uid="uid://dbqqhnh3sx2ey" path="res://Assets/Art/Blob.png" id="5_vtepg"]
[ext_resource type="Texture2D" uid="uid://bwbr46yaud2np" path="res://Assets/Art/Player_Combat.png" id="6_8dnnj"]
[ext_resource type="Texture2D" uid="uid://072s2rxwk6m8" path="res://Assets/UI/panel-border-004.png" id="6_opfnp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_opfnp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cp0ys"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yhxw7"]
atlas = ExtResource("2_ce3w2")
region = Rect2(0, 0, 96, 96)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_trj04"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cp0ys"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_trj04"]
atlas = ExtResource("6_opfnp")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_16hvj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_opfnp"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.117681, 0.113398, 0.117586, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.997202, 0.95395, 0.949028, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yhxw7"]

[sub_resource type="Animation" id="Animation_cp0ys"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("panelName:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("panelName:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("panelName/panelBox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(465, 275.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("panelName/panelBox:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("panelName/panelBox:pivot_offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_opfnp"]
resource_name = "namebox_flyin"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("panelName:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("panelName:theme_override_styles/panel:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("panelName/panelBox:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.42, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(465, -500), Vector2(465, 320), Vector2(465, 250), Vector2(465, 275.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("panelName/panelBox:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("panelName/panelBox:pivot_offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(303, 65)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yhxw7"]
_data = {
&"RESET": SubResource("Animation_cp0ys"),
&"namebox_flyin": SubResource("Animation_opfnp")
}

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n45e2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_opfnp")

[node name="ColorRect" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BackgroundImages" type="Control" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel/BackgroundImages"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vr1f0")
expand_mode = 3

[node name="TextureRect5" type="TextureRect" parent="Panel/BackgroundImages"]
modulate = Color(0.377919, 0.377919, 0.377919, 1)
layout_mode = 0
offset_left = 525.0
offset_top = 271.0
offset_right = 742.0
offset_bottom = 487.0
texture = ExtResource("3_t1dhk")
expand_mode = 1

[node name="TextureRect6" type="TextureRect" parent="Panel/BackgroundImages"]
modulate = Color(0.572988, 0.572988, 0.572988, 1)
layout_mode = 0
offset_left = 725.0
offset_top = 252.0
offset_right = 992.0
offset_bottom = 518.0
texture = ExtResource("3_t1dhk")
expand_mode = 1

[node name="TextureRect7" type="TextureRect" parent="Panel/BackgroundImages"]
layout_mode = 0
offset_left = 948.0
offset_top = 229.0
offset_right = 1275.0
offset_bottom = 555.0
texture = ExtResource("3_t1dhk")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="Panel/BackgroundImages"]
layout_mode = 0
offset_left = 543.0
offset_top = 460.0
offset_right = 839.0
offset_bottom = 614.0
texture = ExtResource("4_5egv6")
expand_mode = 1
flip_h = true

[node name="TextureRect3" type="TextureRect" parent="Panel/BackgroundImages"]
layout_mode = 0
offset_left = 592.0
offset_top = 273.0
offset_right = 812.0
offset_bottom = 594.0
texture = ExtResource("5_vtepg")
expand_mode = 1
flip_h = true

[node name="TextureRect2" type="TextureRect" parent="Panel/BackgroundImages"]
layout_mode = 0
offset_left = 865.0
offset_top = 149.0
offset_right = 1523.0
offset_bottom = 868.0
texture = ExtResource("6_8dnnj")
expand_mode = 1
flip_h = true

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -62.0
offset_top = -30.0
offset_right = -8.0
offset_bottom = -7.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.485703, 0.485704, 0.485703, 1)
theme_override_fonts/font = ExtResource("2_opfnp")
text = "ver 0.0.1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="panelMenu" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -522.0
offset_right = 528.0
offset_bottom = -30.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_cp0ys")

[node name="ColorRect" type="ColorRect" parent="Panel/panelMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="NinePatchRect" type="NinePatchRect" parent="Panel/panelMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_yhxw7")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="PanelContainer" type="PanelContainer" parent="Panel/panelMenu/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_trj04")

[node name="MarginContainer" type="MarginContainer" parent="Panel/panelMenu/NinePatchRect/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/panelMenu/NinePatchRect/PanelContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("3_n45e2")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/panelMenu/NinePatchRect/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="Panel/panelMenu/NinePatchRect/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_1ehe0")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Panel/panelMenu/NinePatchRect/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_n45e2")
theme_override_font_sizes/font_size = 42
text = " Main Menu "
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/panelMenu/NinePatchRect/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_1ehe0")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="MarginContainer" type="MarginContainer" parent="Panel/panelMenu/NinePatchRect/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="btnNewGame" type="Button" parent="Panel/panelMenu/NinePatchRect/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "New Game"

[node name="btnContinue" type="Button" parent="Panel/panelMenu/NinePatchRect/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
disabled = true
text = "Continue"

[node name="btnCompendium" type="Button" parent="Panel/panelMenu/NinePatchRect/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
disabled = true
text = "Compendium"

[node name="btnSettings" type="Button" parent="Panel/panelMenu/NinePatchRect/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Settings"

[node name="btnQuit" type="Button" parent="Panel/panelMenu/NinePatchRect/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Quit"

[node name="MarginContainer2" type="MarginContainer" parent="Panel/panelMenu/NinePatchRect/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="panelName" type="Panel" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cp0ys")

[node name="panelBox" type="Panel" parent="Panel/panelName"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -303.0
offset_top = -156.5
offset_right = 303.0
offset_bottom = 156.5
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Panel/panelName/panelBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="NinePatchRect" type="NinePatchRect" parent="Panel/panelName/panelBox"]
self_modulate = Color(0.65, 0.0585, 0.0585, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_trj04")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="PanelContainer" type="PanelContainer" parent="Panel/panelName/panelBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_16hvj")

[node name="MarginContainer" type="MarginContainer" parent="Panel/panelName/panelBox/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/panelName/panelBox/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/panelName/panelBox/PanelContainer/MarginContainer/VBoxContainer"]
modulate = Color(0.65098, 0.0588235, 0.0588235, 1)
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="Panel/panelName/panelBox/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_1ehe0")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Panel/panelName/panelBox/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_n45e2")
theme_override_font_sizes/font_size = 42
text = "Enter  Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/panelName/panelBox/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_1ehe0")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="MarginContainer" type="MarginContainer" parent="Panel/panelName/panelBox/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="txtName" type="TextEdit" parent="Panel/panelName/panelBox/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_opfnp")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_opfnp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yhxw7")
placeholder_text = "Enter your name, Hero..."
emoji_menu_enabled = false
drag_and_drop_selection_enabled = false

[node name="MarginContainer2" type="MarginContainer" parent="Panel/panelName/panelBox/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="txtError" type="Label" parent="Panel/panelName/panelBox/PanelContainer/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.44, 0.44, 0.44, 1)
theme_override_fonts/font = ExtResource("2_opfnp")
theme_override_font_sizes/font_size = 15
text = " "

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/panelName/panelBox/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/panelName/panelBox/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="btnName" type="Button" parent="Panel/panelName/panelBox/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme = ExtResource("3_n45e2")
text = "Done"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel"]
libraries = {
&"": SubResource("AnimationLibrary_yhxw7")
}

[connection signal="pressed" from="Panel/panelMenu/NinePatchRect/PanelContainer/MarginContainer/VBoxContainer/btnNewGame" to="." method="_on_btn_new_game_pressed"]
[connection signal="pressed" from="Panel/panelMenu/NinePatchRect/PanelContainer/MarginContainer/VBoxContainer/btnContinue" to="." method="_on_btn_continue_pressed"]
[connection signal="pressed" from="Panel/panelMenu/NinePatchRect/PanelContainer/MarginContainer/VBoxContainer/btnQuit" to="." method="_on_btn_quit_pressed"]
[connection signal="text_changed" from="Panel/panelName/panelBox/PanelContainer/MarginContainer/VBoxContainer/txtName" to="." method="_on_txt_name_text_changed"]
[connection signal="pressed" from="Panel/panelName/panelBox/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/btnName" to="." method="_on_btn_name_pressed"]
